--- a/style.css
+++ b/style.css
@@ -152,10 +152,7 @@ ul .fa-bars{
 .mask-contrs{
   display: none;
 }
-.desktop-svg{
 
-
-}
 .mobile-svg{
  width: 0;
  height: 0;
@@ -182,4 +179,84 @@ width: 0;
 }
 .insf{
 margin-left: 40px;
+}
+.footer{
+  background:#ffffff;
+  padding:30px 0px;
+  font-family: 'Play', sans-serif;
+  text-align:center;
+  }
+  
+  .footer .row{
+  width:100%;
+  margin:1% 0%;
+  padding:0.6% 0%;
+  color:gray;
+  font-size:0.8em;
+  }
+  
+  .footer .row a{
+  text-decoration:none;
+  color:rgb(109, 109, 109);
+  transition:0.5s;
+  }
+  
+  .footer .row a:hover{
+  color:#000000;
+  }
+  
+  .footer .row ul{
+  width:100%;
+  }
+  
+  .footer .row ul li{
+  display:inline-block;
+  margin:0px 30px;
+  }
+  
+  .footer .row a i{
+  font-size:2em;
+  margin:0% 1%;
+  }
+  
+  @media (max-width:720px){
+  .footer{
+  text-align:left;
+  padding:5%;
+  }
+  .footer .row ul li{
+  display:block;
+  margin:10px 0px;
+  text-align:left;
+  }
+  .footer .row a i{
+  margin:0% 3%;
+  }
+  .pdfs{
+    display: flex;
+    flex-direction: column;
+  }
+  }
+  .pdfs{
+    display: flex;
+    
+  }
+  .pdf{
+    color: #ff0054;
+    margin: 20px;
+  }
+  .pdf:hover{
+    border-bottom: 2px solid #ff0054;
+  }
+  /* Initially hide elements */
+.hidden {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+/* Show elements when they become visible */
+.show {
+  opacity: 1;
+  transform: translateY(0);
 }
