--- a/style.css
+++ b/style.css
@@ -215,13 +215,14 @@ margin-left: 40px;
   text-align: center;
   padding: 40px 20px 20px;
   color: #999;
+  
   font-family: 'Arial', sans-serif;
   box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.05);
-  border-top: 2px solid #e2e2e2; /* Yellow line */
+  border-top: 2px solid #eeff00; /* Yellow line */
 }
 
 .social-icons {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .social-icons i {
@@ -231,7 +232,9 @@ margin-left: 40px;
   transition: 0.3s;
   cursor: pointer;
 }
-
+.bigfoot{
+  height: 150px;
+}
 .social-icons i:hover {
   color: #000;
 }
@@ -258,7 +261,7 @@ margin-left: 40px;
 .footer-line {
   border: none;
   height: 1px;
-  background-color: #dddddd;
+  background-color: #fbff00;
   margin: 20px auto;
   width: 90%;
 }
