--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ margin-left: 40px;
 }
 .ios-fallback {
   width: 100vw;
-  height: 60vh;
+  height: 70vh;
   background-color: #ffffff;
   color: #000000;
   display: flex;
@@ -335,6 +335,7 @@ margin-left: 40px;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.5rem;
+  font-family: 'Oswald';
 }
 
 .ios-nav a {
@@ -343,6 +344,7 @@ margin-left: 40px;
   color: #000;
   font-weight: 600;
   transition: color 0.3s ease;
+  font-family: 'Oswald';
 }
 
 .ios-nav a:hover {
