--- a/style.css
+++ b/style.css
@@ -335,6 +335,8 @@ margin-left: 40px;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.5rem;
+  margin-top: 30px;
+  
   font-family: 'Oswald';
 }
 
